# narrata

./: .gitignore  404.html  CITATION.cff  CONTRIBUTING.md  DIARY.md  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  tests.yml  weekly.yml
assets/: demo.tape
docs/: architecture.md  design-decisions.md  mcp.md  pipeline.md  references.md  tutorial.md
mcp/: README.md  index.html
pipeline/: index.html
reference/narrata/: index.html
reference/narrata/adapters/: index.html
reference/narrata/analysis/: index.html
reference/narrata/analysis/indicators/: index.html
reference/narrata/analysis/patterns/: index.html
reference/narrata/analysis/regimes/: index.html
reference/narrata/analysis/summary/: index.html
reference/narrata/analysis/support_resistance/: index.html
reference/narrata/analysis/symbolic/: index.html
reference/narrata/cli/: index.html
reference/narrata/composition/: index.html
reference/narrata/composition/compare/: index.html
reference/narrata/composition/narrate/: index.html
reference/narrata/compression/: index.html
reference/narrata/compression/digits/: index.html
reference/narrata/exceptions/: index.html
reference/narrata/formatting/: index.html
reference/narrata/formatting/serializers/: index.html
reference/narrata/mcp_api/: index.html
reference/narrata/rendering/: index.html
reference/narrata/rendering/sparkline/: index.html
reference/narrata/types/: index.html
reference/narrata/validation/: index.html
reference/narrata/validation/ohlcv/: index.html
scripts/: bump_release_versions.py  check_release_versions.py  generate_backend_examples.py  update_backend_examples.py
search/: search_index.json
skills/narrata/: SKILL.md
src/narrata/: README.md  pyproject.toml
src/narrata-mcp/: README.md  pyproject.toml
src/narrata-mcp/narrata_mcp/: __init__.py  __main__.py  server.py
src/narrata-mcp/tests/: test_server.py
src/narrata/narrata/: __init__.py  __main__.py  adapters.py  cli.py  exceptions.py  mcp_api.py  types.py
src/narrata/narrata/analysis/: __init__.py  indicators.py  patterns.py  regimes.py  summary.py  support_resistance.py  symbolic.py
src/narrata/narrata/composition/: __init__.py  compare.py  narrate.py
src/narrata/narrata/compression/: __init__.py  digits.py
src/narrata/narrata/formatting/: __init__.py  serializers.py
src/narrata/narrata/rendering/: __init__.py  sparkline.py
src/narrata/narrata/validation/: __init__.py  ohlcv.py
src/narrata/tests/: conftest.py  test_adapters.py  test_cli.py  test_compare.py  test_digits.py  test_formatting.py  test_import_boundaries.py  test_indicators.py  test_intraday.py  test_mcp_api.py  test_narrate.py  test_patterns.py  test_public_api.py  test_readme_sync.py  test_regimes.py  test_sparkline.py  test_summary.py  test_support_resistance.py  test_symbolic.py  test_validation.py
src/narrata/tests/assets/: AAPL.csv  AAPL.parquet  AAPL.tsv  aapl_15m_1d.csv  aapl_15m_5d.csv  aapl_1y.csv  msft_1y.csv
tutorial/: index.html
