[project]
name = "narrata-workspace"
version = "0.1.0"
description = "Monorepo workspace for narrata packages"
requires-python = ">=3.11"
dependencies = [
    "narrata[all]",
    "narrata-mcp",
]

[tool.uv.sources]
narrata = { workspace = true }
narrata-mcp = { workspace = true }

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[tool.uv.workspace]
members = ["src/*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
