[project]
name = "narrata-mcp"
version = "0.1.0"
description = "FastMCP server for narrata high-level time-series narration tools"
authors = [{ name = "Marcin Miklitz", email = "11770857+marcinmiklitz@users.noreply.github.com" }]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=2.10.0",
    "mcp>=1.26.0",
    "narrata[all]>=0.1.0",
]

[project.scripts]
narrata-mcp = "narrata_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.uv.sources]
narrata = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["narrata_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["narrata_mcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-ra -q --strict-markers --strict-config"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
